fix text clipping

--- a/components/Home/Hero/styles.module.scss
+++ b/components/Home/Hero/styles.module.scss
@@ -91,6 +91,7 @@
         margin-top: 30px;
         font-weight: 500;
         font-size: 45px;
+        height: 60px;
         color: #FCDC8F;
         text-shadow: 0px 1px 20px rgba(252, 220, 143, 0.76);
         animation-name: glow;
